--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-hello world
-every body
+<!DOCTYPE html>
+<html>
+<head>
+<p style="colour:green;font-family:engravers MT;font-size:35px"><marquee scrollamount="5">WELLCOME KANG AZZ ^_^</P></marquee>
+<tittle> Kongkon Gawe Web </tittle>
+</head>
+</body background="IMG_20191121_160736.jpg">
+
+<h1 style="color:orange">
+
+</body>
+</html>
+<p align="center"><img src="IMG_20191121_160736.png"width="690"height"377"isemap="#info">
